Pull up following revision(s) (requested by cegger in ticket #105): 	usr.sbin/cpuctl/cpuctl.c: revision 1.11 cpu_identify: check ID against number of processors. Fix for PR/39955.